--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ copyright_owner: "Shepherd Dog, LLC"
 pagination:
   enabled: true
   sort_reverse: true
+permalink: pretty
 
 # Build settings
 markdown: kramdown
