Fix issue where the homepage scrolls on the x-axis when it shouldn't be able to.

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ twitter_username: ShepherdDogHQ
 github_username:  ShepherdDog
 copyright_starting_year: "2015"
 copyright_owner: "Shepherd Dog, LLC"
-version: 2.0.0e
+version: 2.0.0f
 pagination:
   enabled: true
   sort_reverse: true
